chore: loading css

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,13 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
 </head>
 
-<body>
-  OOKK!!
+<body class="loading">
+  <div></div>
 </body>
 
 </html>
